--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
+
+
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+
+main{
+  color: #1b1b1b;
+
+  min-height: calc(100vh - 133px);
+
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 50px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ 
+  text-align: center;
+}
+
+
+.Light main p, .Light main h6, .Light main time{
+  color: #555;
+}
+
+.Light main button{
+  border: 2px solid white;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,7 +55,6 @@ body {
   text-decoration: none;
   list-style: none;
 
-  letter-spacing: 1px;
 }
 
 html {
@@ -127,4 +161,33 @@ border-color: #dc3545;
 .fa-heart{
   font-size: 33px  ;
   color: #e14656;
+}
+
+
+span {
+  animation: heart 7s infinite linear;
+}
+
+@keyframes heart {
+  0%,
+  100% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+.mt{
+  margin-top: 1em;
+}
+.mtt{
+  margin-top: 2em;
+}
+.mttt{
+  margin-top: 3em;
+}
+.center{
+ text-align: center;
 }
