--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
 .flex {
   display: flex;
   align-items: center;
@@ -49,9 +49,7 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-
-  font-family: sans-serif;
-
+  font-family: "Cairo", sans-serif;
   text-decoration: none;
   list-style: none;
 
