--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -17,9 +17,6 @@
 /* ==============================
 1-  OPIONS (filtered data)
 =================================*/
-.home .parent-of-btns {
- 
-}
 
 .home .parent-of-btns button {
   background-color: #3467c2;
@@ -48,7 +45,8 @@
 
 .home .all-tasks .one-task {
   border: 2px solid antiquewhite;
-  margin: 0;
+  margin: 10px;
+  position: relative;
   width: 300px;
   cursor: pointer;
   height: 141px;
@@ -81,13 +79,18 @@
 .home .all-tasks .one-task .time {
   font-size: 11px;
   text-align: right;
-  margin-right: 9px;
   color: rgb(164, 213, 255);
-  line-height: 19px;
-  position: relative;
-  bottom: 100px;
+  position: absolute;
+  top: -10px;
+  left: 5px;
 }
-
+.home .all-tasks .one-task .completed {
+  font-size: 11px;
+  text-align: right;
+  color: rgb(0, 246, 115);
+  position: absolute;
+  top: -10px;
+  right: 5px;}
 /* ==============================
 3- Add new task BTN
 =================================*/
