--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -148,6 +148,7 @@ font-size: 15px;
 }
 .Light .home .all-tasks .one-task {
   border:2px solid #000;
+  overflow:auto;
   background-color: rgba(255, 228, 196, 0.511);
 }
 .Light .home .all-tasks .one-task:hover {
